<resources>
    //Welcome Page Texts
    <string name="thanks_txt">Thank you for installing our          Lite Budgeting App!</string>
    <string name="tipFor_w1">Click the Setup button to start filling out our setup form.</string>
    <string name="btnTo_setupForm">Setup</string>
    //End



    //Setup Page 1 Texts
    <string name="app_name">Lite Budgeting</string>
    <string name="finance_txt">Finances Setup</string>
    <string name="question1_txt">2) What form of payment do you receive?</string>
    <string name="question2_txt">3) What type of pay period does your company have?</string>
    <string name="empty_int">0</string>
    //End



    //Setup Page Texts
    <string name="expenses_txt">Expenses Setup</string>
    <string name="housing_txt">1) How much do you pay monthly for housing?</string>
    <string name="water_txt">2) How much do you pay monthly for water?</string>
    <string name="electric_txt">3) How much do you pay monthly for electricity?</string>
    <string name="AC_txt">4) How much do you pay monthly for air conditioning?</string>
    <string name="Car_txt">5) How much do you pay monthly for your car insurance?</string>
    <string name="Health_txt">6) How much do you pay monthly for your health insurance?</string>
    <string name="Transport_txt">7) How much do you pay monthly for transportation?</string>
    <string name="Groc_txt">8) How much do you pay monthly for groceries?</string>
    <string name="Loan_txt">9) How much do you pay monthly for loans?</string>

    //Subs Page Texts
    <string name="Subs_txt">Enter Your Subscriptions</string>
    <string name="subName_txt">Subscription Name</string>
    <string name="subName_hint">(e.g. Netflix, Disney+, etc.)</string>
    <string name="subCost_txt">Subscription Cost</string>
    <string name="addSub_txt">Would you like to add another subscription?</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>



    //Pay Period Spinner Text
    <string-array name="pay_periods">
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="spinner_description">Enter in your Pay Period</string>
    //End

    //Expenses Spinner Text
    <string-array name="expenses">
        <item>Housing</item>
        <item>Water</item>
        <item>Electricity</item>
        <item>Air Conditioning</item>
        <item>Car Insurance</item>
        <item>Health Insurance</item>
        <item>Transportation</item>
        <item>Groceries</item>
        <item>Loans</item>
    </string-array>
    //End



    //Payment types
    <string name="hourly_pay">Hourly</string>
    <string name="salary_pay">Salary</string>
    <string name="government_pay">Government Assistance</string>
    //End



    //Page Number Text
    <string name="setup_page1">1/4</string>
    <string name="setup_page2">2/4</string>
    <string name="setup_page3">3/4</string>
    <string name="setup_page4">4/4</string>
    //End



    //Setup Pages Buttons Text
    <string name="btnNext">Next</string>
    <string name="btnBack">Back</string>
    <string name="btnSubmitForm">Submit</string>
    <string name="empty_currency">$0.00</string>
    <string name="current_cash_txt">How much money do you have in your bank account currently?</string>
    <string name="cash_input_hint">$10.00</string>
    <string name="hourly_work_txt">How many hours do you typically work a week?</string>
    <string name="hr_hint">30</string>
    <string name="hourly_pay_txt_Q">How much do you get paid per hour?</string>
    <string name="salary_questions">Salary / Government Assistance questions:</string>
    <string name="hourly_questions">Hourly questions:</string>
    <string name="Salary_text">How much is your monthly salary / Government Assistance?</string>
    //End



    //Income page text
    <string name="deleteJobQuestion">From this list, are there any jobs you want to delete?</string>
    <string name="extIncome">Enter in any extra income/profits in the box below.</string>
    <string name="incomeScreentxt">Income Changes</string>
    <string name="content_description_deleteJob">List of your Job Titles</string>
    <string name="tooltips_deleteJob">List of your Job Titles</string>
    <string name="enter_here">Enter Here</string>
    <string name="addJob_button">Add Job</string>
    <string name="addJob_text">Click the button below to add a new job.</string>
    //End

    //Expenses page text
    <string name="housing_expense_txt">Housing</string>
    <string name="water_expense_txt">Water</string>
    <string name="electric_expense_txt">Electricity</string>
    <string name="AC_expense_txt">Air Conditioning</string>
    <string name="car_expense_txt">Car Insurance</string>
    <string name="health_expense_txt">Health Insurance</string>
    <string name="transport_expense_txt">Transportation</string>
    <string name="groc_expense_txt">Groceries</string>
    <string name="loan_expense_txt">Loans</string>
    <string name="edit_btn">Edit</string>
    <string name="total_txt">Total Expenses:</string>
    //End

    //Nav Menu
    <string name="home_icon">Summary</string>
    <string name="income_icon">Income</string>
    <string name="exp_icon">Expenses</string>
    <string name="add_Income">Add an Income Source</string>
    <string name="income_name">1) Please input a name for this income source</string>
    <string name="job_hint">Manager job, Bank teller, etc.</string>
    <string name="title_home">Summary</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="AddJob_hint">Input information for your other job</string>
    //End

    <string name="title_activity_nav_main">Lite Budgeting App</string>

    //Home Nav Page Text
    <string name="txtTotalAmount">Total Remaining this Month:</string>
    <string name="chartSwitchText">Change to ratio view</string>
    <string name="update_expense">Update Expense</string>
    <string name="updExpenseHint">Enter the new monthly cost</string>
    //End

    //Notifications
    <string name="notifi">Alert</string>
    <string name="notifi_description">Your Budgetting Needs Attention!</string>
    <string name="btnAddSub">Add Subscription</string>
    <string name="btnDeleteJob">Delete Job</string>
    //End


</resources>