<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupP1">


    <!--Page Title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finance_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/txtPageTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1_txt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/txtPaymentTypeQ"/>

    <RadioGroup
        android:id="@+id/payment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPaymentTypeQ"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/hourly_pay"
            android:text="@string/hourly_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/salary_pay"
            android:text="@string/salary_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/government_pay"
            android:text="@string/government_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>



    <!--Page Number-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_page1"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtPageNumber1"
        tools:ignore="RelativeOverlap" />


    <!--Next Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnNextP2"/>

    <TextView
        android:id="@+id/txtPayPeriodQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2_txt"
        android:textSize="18sp"
        android:layout_below="@id/payment_form"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/list_payPeriods"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/txtPayPeriodQ"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:spinnerMode="dropdown"
        android:contentDescription="@string/spinner_description"
        android:tooltipText="@string/spinner_description"/>

    <TextView
        android:text="Question 3?????"
        android:layout_below="@+id/list_payPeriods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/txtQ"/>


</RelativeLayout>