<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavMain">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/thanks_txt"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tipFor_w1"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/btnSetup"/>

    <Button
        android:id="@+id/btnSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btnTo_setupForm"
        android:textSize="20sp"/>


</RelativeLayout>