<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expenses.ExpensesFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_expense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/UpdateExpense"/>


    <TextView
        android:id="@+id/expenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/currentExpense"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/expenseLabel"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/editUpdateExpense"
        android:text="@string/updExpenseHint"
        android:textSize="18sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/editUpdateExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/enter_here"
        android:inputType="numberDecimal"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnUpdateExpense"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/editUpdateExpense"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="Update Expense"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>