<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.income.IncomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Income"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/incomepg"/>

    <TextView
        android:id="@+id/textIncome"
        android:layout_width="match_parent"
        android:layout_height="1dp"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incomeScreentxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/incomeScreen"/>


    <TextView
        android:id="@+id/extIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:text="@string/extIncome"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/extIncometxt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:hint="@string/enter_here"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmitForm"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/teal_200"
        android:id="@+id/extincomebtn"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pay Change"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
      />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/income_name_txt"
        android:text="Do you want to switch your job?"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="275dp"
        />

    <RadioGroup
        android:id="@+id/income_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/income_name_txt"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/yes_change"
            android:text="Yes"
            android:layout_marginLeft="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/no_change"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>


    <TextView
        android:id="@+id/txthrorsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Pay Period"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/payment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txthrorsr"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/hourly_change"
            android:text="@string/hourly_pay"
            android:layout_marginLeft="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/salary_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_pay" />

    </RadioGroup>


    <TextView
        android:id="@+id/PayPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_form"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="162dp"
        android:text="Pay Amount"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/payamt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="162dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_here"
        android:inputType="phone"
        android:autofillHints="" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmitForm"
        android:textSize="20sp"
        android:layout_marginBottom="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/teal_200"
        android:id="@+id/btnSubmitJob"/>






</RelativeLayout>